# kos-memory-leak

./: README.md  cross-build.sh  image-build.sh
einit/src/: init.yaml.in
subscriber/: CMakeLists.txt
subscriber/src/: gpio.cpp  gpiomodule.cpp  gpiomodule.h  main.cpp  subscriber.cpp
